src/test/ui/pattern/bindings-after-at/borrowck-pat-ref-mut-twice.stderr
warning: the feature `bindings_after_at` is incomplete and may cause the compiler to crash
  --> $DIR/borrowck-pat-ref-mut-twice.rs:3:12
   |
LL | #![feature(bindings_after_at)]
   |            ^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

error[E0007]: cannot bind by-move with sub-bindings
  --> $DIR/borrowck-pat-ref-mut-twice.rs:25:9
   |
LL |     let a @ (ref mut b, ref mut c) = (U, U);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^ binds an already bound by-move value by moving it

error[E0007]: cannot bind by-move with sub-bindings
  --> $DIR/borrowck-pat-ref-mut-twice.rs:29:9
   |
LL |     let a @ (b, [c, d]) = &mut val; // Same as ^--
   |         ^^^^^^^^^^^^^^^ binds an already bound by-move value by moving it

error[E0007]: cannot bind by-move with sub-bindings
  --> $DIR/borrowck-pat-ref-mut-twice.rs:33:9
   |
LL |     let a @ &mut ref mut b = &mut U;
   |         ^^^^^^^^^^^^^^^^^^ binds an already bound by-move value by moving it

error[E0007]: cannot bind by-move with sub-bindings
  --> $DIR/borrowck-pat-ref-mut-twice.rs:36:9
   |
LL |     let a @ &mut (ref mut b, ref mut c) = &mut (U, U);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ binds an already bound by-move value by moving it

error[E0499]: cannot borrow `_` as mutable more than once at a time
  --> $DIR/borrowck-pat-ref-mut-twice.rs:9:21
   |
LL |     let ref mut a @ ref mut b = U;
   |         ------------^^^^^^^^^
   |         |           |
   |         |           second mutable borrow occurs here
   |         first mutable borrow occurs here
LL |
LL |     drop(a);
   |          - first borrow later used here

error[E0499]: cannot borrow `_` as mutable more than once at a time
  --> $DIR/borrowck-pat-ref-mut-twice.rs:16:21
   |
LL |     let ref mut a @ ref mut b = U;
   |         ------------^^^^^^^^^
   |         |           |
   |         |           second mutable borrow occurs here
   |         first mutable borrow occurs here
LL |
LL |     *a = U;
   |     ------ first borrow later used here

error[E0382]: borrow of moved value
  --> $DIR/borrowck-pat-ref-mut-twice.rs:25:25
   |
LL |     let a @ (ref mut b, ref mut c) = (U, U);
   |         ----------------^^^^^^^^^-   ------ move occurs because value has type `(main::U, main::U)`, which does not implement the `Copy` trait
   |         |               |
   |         |               value borrowed here after move
   |         value moved here

error[E0382]: borrow of moved value
  --> $DIR/borrowck-pat-ref-mut-twice.rs:29:21
   |
LL |     let a @ (b, [c, d]) = &mut val; // Same as ^--
   |         ------------^--   -------- move occurs because value has type `&mut (main::U, [main::U; 2])`, which does not implement the `Copy` trait
   |         |           |
   |         |           value borrowed here after move
   |         value moved here

error[E0382]: borrow of moved value
  --> $DIR/borrowck-pat-ref-mut-twice.rs:33:18
   |
LL |     let a @ &mut ref mut b = &mut U;
   |         ---------^^^^^^^^^   ------ move occurs because value has type `&mut main::U`, which does not implement the `Copy` trait
   |         |        |
   |         |        value borrowed here after move
   |         value moved here

error[E0382]: borrow of moved value
  --> $DIR/borrowck-pat-ref-mut-twice.rs:36:30
   |
LL |     let a @ &mut (ref mut b, ref mut c) = &mut (U, U);
   |         ---------------------^^^^^^^^^-   ----------- move occurs because value has type `&mut (main::U, main::U)`, which does not implement the `Copy` trait
   |         |                    |
   |         |                    value borrowed here after move
   |         value moved here

error[E0499]: cannot borrow `_` as mutable more than once at a time
  --> $DIR/borrowck-pat-ref-mut-twice.rs:52:24
   |
LL |         ref mut a @ Ok(ref mut b) | ref mut a @ Err(ref mut b) => {
   |         ---------------^^^^^^^^^-
   |         |              |
   |         |              second mutable borrow occurs here
   |         first mutable borrow occurs here
...
LL |             *a = Err(U);
   |             ----------- first borrow later used here

error[E0499]: cannot borrow `_` as mutable more than once at a time
  --> $DIR/borrowck-pat-ref-mut-twice.rs:52:53
   |
LL |         ref mut a @ Ok(ref mut b) | ref mut a @ Err(ref mut b) => {
   |                                     ----------------^^^^^^^^^-
   |                                     |               |
   |                                     |               second mutable borrow occurs here
   |                                     first mutable borrow occurs here
...
LL |             *a = Err(U);
   |             ----------- first borrow later used here

error[E0499]: cannot borrow `_` as mutable more than once at a time
  --> $DIR/borrowck-pat-ref-mut-twice.rs:62:24
   |
LL |         ref mut a @ Ok(ref mut b) | ref mut a @ Err(ref mut b) => {
   |         ---------------^^^^^^^^^-
   |         |              |
   |         |              second mutable borrow occurs here
   |         first mutable borrow occurs here
...
LL |             drop(a);
   |                  - first borrow later used here

error[E0499]: cannot borrow `_` as mutable more than once at a time
  --> $DIR/borrowck-pat-ref-mut-twice.rs:62:53
   |
LL |         ref mut a @ Ok(ref mut b) | ref mut a @ Err(ref mut b) => {
   |                                     ----------------^^^^^^^^^-
   |                                     |               |
   |                                     |               second mutable borrow occurs here
   |                                     first mutable borrow occurs here
...
LL |             drop(a);
   |                  - first borrow later used here

error: aborting due to 14 previous errors

Some errors have detailed explanations: E0007, E0382, E0499.
For more information about an error, try `rustc --explain E0007`.
